match truncate element text with sizing and line height of other text to avoid shifts

--- a/packages/components/src/Autocomplete/AutocompleteRebuilt.module.css
+++ b/packages/components/src/Autocomplete/AutocompleteRebuilt.module.css
@@ -109,6 +109,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  align-content: flex-start;
   gap: var(--space-smaller);
   padding: var(--field--padding-top) var(--field--padding-right)
     var(--field--padding-bottom) var(--field--padding-left);
